fix: overflow hidden hiding autocomplete

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -171,7 +171,6 @@ button.category_button {
   border: 1px solid var(--color-search-border);
   box-shadow: var(--color-search-shadow);
   background: var(--color-search-background);
-  overflow: hidden;
 }
 
 #clear_search {
